@@ -34,6 +34,7 @@ Communications Officer Catherine Clarke was really pleased with the turn out and
 
 The calculator entry area is divided into three sections - monthly and annual spending, and housing costs. Each section has a range of fields - such as food, council tax and property value or rent - for which a figure should be entered using numbers, not words. It is not necessary to include a £ sign at any point. More details on what should be included and excluded from the figures entered for the different fields is available on the calculator by hitting the + button next to where it says "How to fill in this section". After entering all figures possible, hit the calculate button, and you will be shown your personal annual inflation estimate. The annual RPI figure will be shown for comparison.
 
-A free service that provides automatic Braille conversion is proving popular despite still being in test phase. Anyone wanting to use the service, which is partly funded by the EU, can send plain text, rich text, html or Word documents by e-mail. Within a few minutes they receive their document either as an MP3 audio file or as electronic Braille. Electronic Braille can be read by a tactile display - a device connected to the computer with a series of pins that are raised or lowered to represent the Braille characters - or sent to a Braille printer. 
+A free service that provides automatic Braille conversion is proving popular despite still being in test phase. Anyone wanting to use the service, which is partly funded by the EU, can send plain text, rich text, html or Word documents by e-mail. Within a few minutes they receive their document either as an MP3 audio file or as electronic Braille. Electronic Braille can be read by a tactile display - a device connected to the computer with a series of pins that are raised or lowered to represent the Braille characters - or sent to a Braille printer.
 
 Braille was invented in 1821 by Frenchman Louis Braille, and works by replacing the letters most people look at and read with patterns of raised dots they can feel with their fingers. Each letter in the alphabet has its own pattern made up of between one and five dots. Some words have their own patterns too. The Royal National Institute for the Blind (RNIB) wants the government to make it much easier for kids to get their hands on large print text books.
+
